--- a/src/app/lista-uscite/lista-uscite.component.html
+++ b/src/app/lista-uscite/lista-uscite.component.html
@@ -1,9 +1,26 @@
 <div class="container">
-    <h2>Angular material list example</h2>
-    <mat-list>
-      <mat-list-item *ngFor="let uscita of uscite.uscite">
-          <div matLine>{{ uscita.fields.Titolo }}</div>
-           <div matLine>Data: {{ uscita.fields.Data }}</div>
-      </mat-list-item>
-    </mat-list>
+    <h2>Lista uscite future</h2>
+    <table mat-table *ngIf="this.uscite" [dataSource]="this.uscite.uscite">
+      <ng-container matColumnDef="titolo">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let element"> {{element.fields.Titolo}} </td>
+      </ng-container>
+      <ng-container matColumnDef="data">
+        <th mat-header-cell *matHeaderCellDef>Data</th>
+        <td mat-cell *matCellDef="let element"> {{element.fields.Data}} </td>
+      </ng-container>
+      <ng-container matColumnDef="luogo">
+        <th mat-header-cell *matHeaderCellDef>Luogo</th>
+        <td mat-cell *matCellDef="let element"> {{element.fields.Luogo}} </td>
+      </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-button *ngIf="!element.fields.Partecipanti.includes(this.currentUser.personaid)" (click)="onActionButtonClick($event, element)">Iscriviti</button>
+          <span *ngIf="element.fields.Partecipanti.includes(this.currentUser.personaid)">Iscritto</span>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
