--- a/src/app/lista-uscite/lista-uscite.component.html
+++ b/src/app/lista-uscite/lista-uscite.component.html
@@ -16,8 +16,8 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button *ngIf="!element.fields.Partecipanti.includes(this.currentUser.personaid)" (click)="onActionButtonClick($event, element)">Iscriviti</button>
-          <span *ngIf="element.fields.Partecipanti.includes(this.currentUser.personaid)">Iscritto</span>
+          <button mat-button *ngIf="!element.fields.Partecipanti.includes(this.dataService.currentUser.personaid)" (click)="onActionButtonClick($event, element)">Iscriviti</button>
+          <span *ngIf="element.fields.Partecipanti.includes(this.dataService.currentUser.personaid)">Iscritto</span>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
