--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,17 +22,17 @@
   
       <mat-divider></mat-divider>
   
-      <button mat-button class="menu-button" routerLink="/lista-uscite">
+      <button mat-button class="menu-button" routerLink="/">
         <mat-icon>home</mat-icon>
-        <span>Lista uscite</span>
+        <span>Home</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/profile">
+      <button mat-button class="menu-button" routerLink="/lista-uscite">
         <mat-icon>person</mat-icon>
-        <span>Profile</span>
+        <span>Lista Uscite</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/about">
+      <button mat-button class="menu-button" routerLink="/lista-uscite-iscritto">
         <mat-icon>info</mat-icon>
-        <span>About</span>
+        <span>Uscite a cui sei iscritto</span>
       </button>
   
       <mat-divider></mat-divider>
