--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="row justify-content-center align-items-center ">
+    <div class="col-12 col-md-3 align-self-center">
+        <button type="button" class="btn btn-primary btn-lg w-100 btn-block" routerLink="/lista-uscite" >Uscite future</button>
+    </div>
+</div>
+<div class="row justify-content-center align-items-center mt-3">
+    <div class="col-12 col-md-3 align-self-center">
+        <button type="button" class="btn btn-primary btn-lg w-100 btn-block" routerLink="/lista-uscite-iscritto" >Uscite a cui sei iscritto</button>
+    </div>
+</div>
