--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,13 +12,13 @@
   
   <mat-sidenav-container>
     <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
-      <img
-        class="avatar mat-elevation-z8"
-        src="https://source.unsplash.com/c_GmwfHBDzk/200x200"
+      <div *ngIf="this.dataService.isAuthenticate">
+      <img class="avatar mat-elevation-z8"
+        src="{{this.imgProfile}}"
       />
   
-      <h4 class="name">John Smith</h4>
-      <p class="designation">Software Engineer</p>
+      <h4 class="name">{{this.persona.persona.fields.Nome}}</h4>
+      <p class="designation">{{this.persona.persona.fields.Ruolo}}</p>
   
       <mat-divider></mat-divider>
   
@@ -27,20 +27,14 @@
         <span>Home</span>
       </button>
       <button mat-button class="menu-button" routerLink="/lista-uscite">
-        <mat-icon>person</mat-icon>
-        <span>Lista Uscite</span>
+        <mat-icon>calendar_today</mat-icon>
+        <span>Uscite</span>
       </button>
       <button mat-button class="menu-button" routerLink="/lista-uscite-iscritto">
-        <mat-icon>info</mat-icon>
-        <span>Uscite a cui sei iscritto</span>
+        <mat-icon>event</mat-icon>
+        <span>Verfica Iscrizioni</span>
       </button>
-  
-      <mat-divider></mat-divider>
-  
-      <button mat-button class="menu-button" routerLink="/help">
-        <mat-icon>help</mat-icon>
-        <span>Help</span>
-      </button>
+    </div>
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="content mat-elevation-z8">
