--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@ mat-toolbar {
   
   mat-sidenav {
     margin: 16px;
-    width: 200px;
+    width: 220px;
     border-right: none;
     background: red;
     color: white;
@@ -18,9 +18,14 @@ mat-toolbar {
     height: calc(100vh - 130px);
     border-radius: 10px;
     margin: 16px;
-    margin-left: 32px;
     padding: 16px;
     overflow: auto;
+  }
+  @media screen and (max-width: 800px) {
+    .content {
+      margin: 5px;
+      padding: 5px;
+    }
   }
   
   mat-sidenav-container {
@@ -53,7 +58,7 @@ mat-toolbar {
   
   .designation {
     margin-top: 2px;
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     color: lightgrey;
   }
   
