--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,10 +30,10 @@
         <mat-icon>calendar_today</mat-icon>
         <span>Uscite</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/lista-uscite-iscritto">
+      <!-- <button mat-button class="menu-button" routerLink="/lista-uscite-iscritto">
         <mat-icon>event</mat-icon>
         <span>Verfica Iscrizioni</span>
-      </button>
+      </button> -->
     </div>
     </mat-sidenav>
     <mat-sidenav-content>
