--- a/src/app/lista-uscite/lista-uscite.component.html
+++ b/src/app/lista-uscite/lista-uscite.component.html
@@ -12,7 +12,9 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button *ngIf="!element.fields.Partecipanti.includes(this.dataService.currentUser.personaid)" (click)="onActionButtonClick($event, element)">Iscriviti</button>
+          <button type="button" class="btn btn-primary" *ngIf="element.fields.Partecipanti != null && !element.fields.Partecipanti.includes(this.dataService.currentUser.personaid)" (click)="onActionButtonClick($event, element)">Iscriviti</button>
+          <span *ngIf="(element.fields.Partecipanti != null && element.fields.Partecipanti.includes(this.dataService.currentUser.personaid)) && !(element.fields.Convocati != null && element.fields.Convocati.includes(this.dataService.currentUser.personaid))">Iscritto</span>
+          <button class="btn btn-secondary" *ngIf="element.fields.Convocati != null && element.fields.Convocati.includes(this.dataService.currentUser.personaid)">Convocato</button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
