--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,9 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="content mat-elevation-z8">
+        <button class="button button-primary" (click)="subscribeToNotifications()">
+          Subscribe
+        </button>
         <router-outlet></router-outlet>
       </div>
     </mat-sidenav-content>
