--- a/src/app/lista-uscite/lista-uscite.component.html
+++ b/src/app/lista-uscite/lista-uscite.component.html
@@ -1,5 +1,10 @@
 
     <h2>Lista uscite future</h2>
+    <div class="d-flex justify-content-center" *ngIf="!showUscite">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
     <table mat-table *ngIf="showUscite" [dataSource]="this.uscite.uscite">
       <ng-container matColumnDef="titolo">
         <th mat-header-cell *matHeaderCellDef>Nome</th>
@@ -30,5 +35,6 @@
         <p *ngFor="let saggio of saggiPersona">
           {{saggio.nome}}
         </p>
+        <div class="row" *ngIf="isChiarina"><div class="col-12"><img src="/assets/squirtle-sax.gif" class="w-100" /></div></div>
       </div>
    </ng-template>
