--- a/src/app/lista-uscite/lista-uscite.component.html
+++ b/src/app/lista-uscite/lista-uscite.component.html
@@ -17,7 +17,8 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button type="button" class="btn btn-primary" *ngIf="element.fields.Partecipanti == null || (element.fields.Partecipanti != null && !element.fields.Partecipanti.includes(this.dataService.currentUser.personaid))" (click)="onActionButtonClick($event, element)">Iscriviti</button>
+          <button type="button" class="btn btn-primary" *ngIf="!element.fields['Chiudi Iscrizioni'] && (element.fields.Partecipanti == null || (element.fields.Partecipanti != null && !element.fields.Partecipanti.includes(this.dataService.currentUser.personaid)))" (click)="onActionButtonClick($event, element)">Iscriviti</button>
+          <span *ngIf="element.fields['Chiudi Iscrizioni'] == true && (element.fields.Partecipanti == null || (element.fields.Partecipanti != null && !element.fields.Partecipanti.includes(this.dataService.currentUser.personaid)))">Iscrizioni Chiuse</span>
           <span *ngIf="(element.fields.Partecipanti != null && element.fields.Partecipanti.includes(this.dataService.currentUser.personaid)) && !(element.fields.Convocati != null && element.fields.Convocati.includes(this.dataService.currentUser.personaid))">Iscritto</span>
           <button class="btn btn-secondary" *ngIf="element.fields.Convocati != null && element.fields.Convocati.includes(this.dataService.currentUser.personaid)" (click)="open(content, element)">Convocato<mat-icon aria-hidden="false"  fontIcon="search"></mat-icon></button>
         </td>
