--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,12 @@
+<div>
 <div class="row justify-content-center align-items-center ">
     <div class="col-12 col-md-3 align-self-center">
         <button type="button" class="btn btn-primary btn-lg w-100 btn-block" routerLink="/lista-uscite" >Uscite future</button>
+    </div>
+</div>
+<div class="row justify-content-center align-items-center " *ngIf="showInsPresenze">
+    <div class="col-12 col-md-3 align-self-center">
+        <button type="button" class="btn btn-primary btn-lg w-100 btn-block" routerLink="/inserisci-presenze" >Inserisci Presenze</button>
     </div>
 </div>
 <!-- <div class="row justify-content-center align-items-center mt-3">
@@ -8,3 +14,4 @@
         <button type="button" class="btn btn-primary btn-lg w-100 btn-block" routerLink="/lista-uscite-iscritto" >Verifica Iscrizioni</button>
     </div>
 </div> -->
+</div>
