--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,11 @@
       </button>
       <button mat-button class="menu-button" routerLink="/inserisci-presenze" *ngIf="showInsPresenze">
         <mat-icon>edit</mat-icon>
-        <span>Presenze</span>
+        <span>Inserisci Presenze</span>
+      </button>
+      <button mat-button class="menu-button" routerLink="/lista-presenze" *ngIf="showInsPresenze">
+        <mat-icon>list</mat-icon>
+        <span>Lista Presenze</span>
       </button>
       <!-- <button mat-button class="menu-button" routerLink="/lista-uscite-iscritto">
         <mat-icon>event</mat-icon>
