--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,6 +9,11 @@
         <button type="button" class="btn btn-primary btn-lg w-100 btn-block" routerLink="/inserisci-presenze" >Inserisci Presenze</button>
     </div>
 </div>
+<div class="row justify-content-center align-items-center " *ngIf="showInsPresenze">
+    <div class="col-12 col-md-3 align-self-center">
+        <button type="button" class="btn btn-primary btn-lg w-100 btn-block" routerLink="/lista-presenze" >Lista Presenze</button>
+    </div>
+</div>
 <!-- <div class="row justify-content-center align-items-center mt-3">
     <div class="col-12 col-md-3 align-self-center">
         <button type="button" class="btn btn-primary btn-lg w-100 btn-block" routerLink="/lista-uscite-iscritto" >Verifica Iscrizioni</button>
