--- a/src/app/lista-presenze/lista-presenze.component.html
+++ b/src/app/lista-presenze/lista-presenze.component.html
@@ -19,15 +19,15 @@
       
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
   <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element">
+    <td mat-cell *matCellDef="let element" colspan="2">
       <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div *ngFor="let mese of mesi">
-          <p>{{element["mesedesc_"+mese]}}</p>
-          <p>{{element["mese_"+mese]}}</p>
-        </div>
+        <table>
+          <tr><th>Periodo</th><th>Presenze</th></tr>
+          <tr *ngFor="let mese of mesi"><td>{{element["mesedesc_"+mese]}}</td><td>{{element["mese_"+mese]}}</td></tr>
+        </table>
       </div>
     </td>
-    <mat-cell *matCellDef="let element" [attr.colspan]="2">
+    <!-- <mat-cell *matCellDef="let element" [attr.colspan]="2">
       <div class="example-element-detail"
            [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
         <div class="example-element-diagram">
@@ -41,7 +41,7 @@
           <span class="example-element-description-attribution"> -- Wikipedia </span>
         </div>
       </div>
-    </mat-cell>
+    </mat-cell> -->
   </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row"
