--- a/src/app/lista-presenze/lista-presenze.component.html
+++ b/src/app/lista-presenze/lista-presenze.component.html
@@ -18,14 +18,25 @@
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
   <ng-container matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let element" colspan="2">
-      <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">       
-        <table>
-          <tr><th>Periodo</th><th>Presenze</th></tr>
-          <tr *ngFor="let mese of mesi"><td>{{element["mesedesc_"+mese]}}</td><td>{{element["mese_"+mese]}}</td></tr>
-        </table>
+      <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <div class="inner-table mat-elevation-z8" *ngIf="expandedElement">
+        <table mat-table [dataSource]="element.detailExpand">
+          <ng-container matColumnDef="mesedesc">
+            <th mat-header-cell *matHeaderCellDef > Periodo </th>
+            <td mat-cell *matCellDef="let element"> {{element.mesedesc}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="presenzemese">
+            <th mat-header-cell *matHeaderCellDef > Presenze Mensili </th>
+            <td mat-cell *matCellDef="let element"> {{element.presenzemese}} </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="detailDisplayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: detailDisplayedColumns;"></tr>
+        </table>  
+        </div>
+
       </div>
     </td>
-
   </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row"
