--- a/src/app/lista-presenze/lista-presenze.component.html
+++ b/src/app/lista-presenze/lista-presenze.component.html
@@ -4,6 +4,15 @@
         <span class="visually-hidden">Loading...</span>
       </div>
     </div>
+    <mat-form-field *ngIf="showPresenze && isResponsabileGs">
+      <mat-label>Seleziona Ruolo</mat-label>
+      <mat-select [(value)]="selected" (selectionChange)="reloadTable(selected)">
+        <mat-option value="Presenze Sbandieratori">Sbandieratori</mat-option>
+        <mat-option value="Presenze Tamburi">Tamburi</mat-option>
+        <mat-option value="Presenze Chiarine">Chiarine</mat-option>
+      </mat-select>
+    </mat-form-field>
+
     <table mat-table *ngIf="showPresenze" [dataSource]="this.presenzeAnno" multiTemplateDataRows>
 
       <ng-container matColumnDef="nome">
